--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <title>WebStudio</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <a href="#">
+                <img scr="images/logo.jpg" alt="WebStudio логотип" width="100" height="30" />
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a href="mailto:info@webstudio.com">info@webstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </div>
+    </header>
 </body>
 </html>
