--- a/index.html
+++ b/index.html
@@ -23,5 +23,30 @@
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
     </header>
+    <main>
+        <section>
+            <h1>Ефективність рішення для вашого бізнесу</h1>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <h2>Увага до деталей</h2>
+                    <p>Наші дизайнери уважно продумують кожен елемент.</p>
+                </li>
+                <li>
+                    <h2>Пунктуальність</h2>
+                    <p>Ми гарантуємо своєчасне використання завданнь.</p>
+                </li>
+                <li>
+                    <h2>Планування</h2>
+                    <p>Наші фахівці ретельно планують кожен етап.</p>
+                </li>
+                <li>
+                    <h2>Сучасні технології</h2>
+                    <p>Ми використовуємо найновіші технологічні рішення.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
