sectia 2 i dobavuv cartunki

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <div>
             <a href="#">
-                <img scr="images/logo.jpg" alt="WebStudio логотип" width="100" height="30" />
+                <img scr="Picture/logo.jpg" alt="WebStudio логотип" width="100" height="30" />
             </a>
         </div>
         <nav>
@@ -44,6 +44,20 @@
                 <li>
                     <h2>Сучасні технології</h2>
                     <p>Ми використовуємо найновіші технологічні рішення.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="Picture/service-1.jpg" alt="Процес дизайну" width="370" height="294" />
+                </li>
+                <li>
+                    <img src="Picture/service-2.jpg" alt="Розробка мобільних додатків" width="370" height="294" />
+                </li>
+                <li>
+                    <img src="Picture/service-3.jpg" alt="Розробка дизайну кольорових рішень" width="370" height="294" />
                 </li>
             </ul>
         </section>
