--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="Picture/member-1.jpg" alt="Ігор Дженченко, Product Designer" width="270" height="260" />
+                    <p>Ігор Дженченко</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="Picture/member-2.jpg" alt="Ольга Рейне, Frontend Developer" width="270" height="260" />
+                    <p>Ольга Рейне</p>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="Picture/member-3.jpg" alt="Микола Тореско, Marketing" width="270" height="260" />
+                    <p>Микола Тореско</p>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="Picture/member-4.jpg" alt="Михайло Бризков, UI Designer" width="270" height="260" />
+                    <p>Михайло Бризков</p>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
