--- a/index.html
+++ b/index.html
@@ -87,5 +87,17 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <div>
+            <a href="#">
+                <img scr="Picture/logo.jpg" alt="WebStudio логотип" width="100" height="30" />
+            </a>
+        </div>
+        <address>
+            <p>м. Київ, пр. Перемоги, 50</p>
+            <a href="mailto:info@webstudio.com">info@webstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
