Vupravuv pomulki v 1 labi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <div>
             <a href="#">
-                <img scr="Picture/logo.jpg" alt="WebStudio логотип" width="100" height="30" />
+                <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30" />
             </a>
         </div>
         <nav>
@@ -26,6 +26,7 @@
     <main>
         <section>
             <h1>Ефективність рішення для вашого бізнесу</h1>
+            <button type="button">Замовити послугу</button>
         </section>
         <section>
             <ul>
@@ -66,22 +67,22 @@
             <ul>
                 <li>
                     <img src="Picture/member-1.jpg" alt="Ігор Дженченко, Product Designer" width="270" height="260" />
-                    <p>Ігор Дженченко</p>
+                    <h3>Ігор Дженченко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="Picture/member-2.jpg" alt="Ольга Рейне, Frontend Developer" width="270" height="260" />
-                    <p>Ольга Рейне</p>
+                    <h3>Ольга Рейне</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="Picture/member-3.jpg" alt="Микола Тореско, Marketing" width="270" height="260" />
-                    <p>Микола Тореско</p>
+                    <h3>Микола Тореско</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="Picture/member-4.jpg" alt="Михайло Бризков, UI Designer" width="270" height="260" />
-                    <p>Михайло Бризков</p>
+                    <h3>Михайло Бризков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -90,7 +91,7 @@
     <footer>
         <div>
             <a href="#">
-                <img scr="Picture/logo.jpg" alt="WebStudio логотип" width="100" height="30" />
+                <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30" />
             </a>
         </div>
         <address>
