--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+    <header>
+        <div>
+            <a href="index.html" class="logo" >
+                <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30">
+            </a>
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html">Студія</a></li>
+                    <li><a href="portfolio.html">Портфоліо</a></li>
+                    <li><a>Контакти</a></li>
+                </ul>
+            </nav>
+            <div class="contacts">
+                <a href="mailto:info@webstidio.com">info@webstidio.com</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
