dobavuv kartunki i napusav main

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,5 +24,32 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="portfolio-filter">
+            <div class="container">
+                <ul class="filter-buttons">
+                    <li><button type="button" class="active">Усі</button></li>
+                    <li><button type="button" class="active">Веб-сайт</button></li>
+                    <li><button type="button" class="active">Дизайн</button></li>
+                    <li><button type="button" class="active">Маркетинг</button></li>
+                </ul>
+            </div>
+        </section>
+        <section class="portfolio-gallery">
+            <div class="container">
+                <ul class="portfolio-list">
+                    <li><img src="Picture/portfolio1.jpg" alt="Техномарк веб-сайт" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio2.jpg" alt="Постер New Orleans vs Golden State" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio4.jpg" alt="Проєкт Prime" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio5.jpg" alt="Проєкт Boxes" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio6.jpg" alt="Inspiration has no Borders" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio7.jpg" alt="Видання Limited Edition" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio8.jpg" alt="Проєкт LAB" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio9.jpg" alt="Growing Business" width="370" height="294"></li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
