--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Студія</a></li>
                     <li><a href="portfolio.html">Портфоліо</a></li>
-                    <li><a>Контакти</a></li>
+                    <li><a href="#">Контакти</a></li>
                 </ul>
             </nav>
             <div class="contacts">
@@ -51,5 +51,17 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30">
+            </a>
+            <address>
+                <p>м. Київ, пр. Лесі Українки, 26</p>
+            <a href="mailto:info@webstudio.com">info@webstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
+        </div>
+    </footer>
 </body>
 </html>
