--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
     <header>
@@ -13,8 +14,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Студія</a></li>
-                <li><a href="#">Портфоліо</a></li>
+                <li><a href="index.html">Студія</a></li>
+                <li><a href="portfolio.html">Портфоліо</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
@@ -95,7 +96,7 @@
             </a>
         </div>
         <address>
-            <p>м. Київ, пр. Перемоги, 50</p>
+            <p>м. Київ, пр. Лесі Українки, 26</p>
             <a href="mailto:info@webstudio.com">info@webstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
