--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,41 @@
         <section class="portfolio-gallery">
             <div class="container">
                 <ul class="portfolio-list">
-                    <li><img src="Picture/portfolio1.jpg" alt="Техномарк веб-сайт" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio2.jpg" alt="Постер New Orleans vs Golden State" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio4.jpg" alt="Проєкт Prime" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio5.jpg" alt="Проєкт Boxes" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio6.jpg" alt="Inspiration has no Borders" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio7.jpg" alt="Видання Limited Edition" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio8.jpg" alt="Проєкт LAB" width="370" height="294"></li>
-                    <li><img src="Picture/portfolio9.jpg" alt="Growing Business" width="370" height="294"></li>
+                    <li><img src="Picture/portfolio1.jpg" alt="Техномарк веб-сайт" width="370" height="294">
+                    <h3>Техномарка</h3>
+                    <p>Веб-сайт</p>
+                    </li>
+                    <li><img src="Picture/portfolio2.jpg" alt="Постер New Orleans vs Golden State" width="370" height="294">
+                    <h3>Постер New Orleans vs Golden State</h3>
+                    <p>Дизайн</p>
+                    </li>
+                    <li><img src="Picture/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Додаток</p>
+                    </li>
+                    <li><img src="Picture/portfolio4.jpg" alt="Проєкт Prime" width="370" height="294">
+                    <h3>Проєкт Prime</h3>
+                    <p>Маркетинг</p>
+                    </li>
+                    <li><img src="Picture/portfolio5.jpg" alt="Проєкт Boxes" width="370" height="294">
+                    <h3>Проєкт Boxes</h3>
+                    <p>Додаток</p>
+                    </li>
+                    <li><img src="Picture/portfolio6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p></li>
+                    <li><img src="Picture/portfolio7.jpg" alt="Видання Limited Edition" width="370" height="294">
+                    <h3>Видання Limited Edition</h3>
+                    <p>Дизайн</p>
+                    </li>
+                    <li><img src="Picture/portfolio8.jpg" alt="Проєкт LAB" width="370" height="294">
+                    <h3>Проєкт LAB</h3>
+                    <p>Маркетинг</p>
+                    </li>
+                    <li><img src="Picture/portfolio9.jpg" alt="Growing Business" width="370" height="294">
+                    <h3>Growing Business</h3>
+                    <p>Додаток</p>
+                    </li>
                 </ul>
             </div>
         </section>
