--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="portfolio-header">
         <div>
             <a href="index.html" class="logo" >
                 <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30">
