--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-    <header>
+    <header class="index-header">
         <div>
             <a href="#">
                 <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30" />
@@ -25,9 +25,9 @@
         </div>
     </header>
     <main>
-        <section>
-            <h1>Ефективність рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+        <section class="banner-section">
+            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+            <button type="button" class="button-active">Замовити послугу</button>
         </section>
         <section>
             <ul>
@@ -90,16 +90,16 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="container">
             <a href="#">
                 <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30" />
             </a>
-        </div>
         <address>
             <p>м. Київ, пр. Лесі Українки, 26</p>
             <a href="mailto:info@webstudio.com">info@webstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+        </div>
     </footer>
 </body>
 </html>
