--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="portfolio-header">
@@ -19,7 +22,7 @@
                 </ul>
             </nav>
             <div class="contacts">
-                <a href="mailto:info@webstidio.com">info@webstidio.com</a>
+                <a href="mailto:info@webstudio.com">info@webstudio.com</a>
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </div>
         </div>
