--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap&subset=cyrillic,latin" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 </head>
 <body>
     <header class="portfolio-header">
-        <div>
+        <div class="container">
             <a href="index.html" class="logo" >
-                <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30">
+                <img src="Picture/logo.png" alt="WebStudio логотип">
             </a>
             <nav>
                 <ul class="menu">
@@ -33,6 +33,7 @@
                 <ul class="filter-buttons">
                     <li><button type="button" class="active">Усі</button></li>
                     <li><button type="button" class="active">Веб-сайт</button></li>
+                    <li><button type="button" class="active">Додаток</button></li>
                     <li><button type="button" class="active">Дизайн</button></li>
                     <li><button type="button" class="active">Маркетинг</button></li>
                 </ul>
@@ -41,40 +42,40 @@
         <section class="portfolio-gallery">
             <div class="container">
                 <ul class="portfolio-list">
-                    <li><img src="Picture/portfolio1.jpg" alt="Техномарк веб-сайт" width="370" height="294">
-                    <h3>Техномарка</h3>
-                    <p>Веб-сайт</p>
+                    <li><img src="Picture/portfolio1.jpg" alt="Технокряк веб-сайт" width="370" height="294">
+                    <h3 class="h3-text">Технокряк</h3>
+                    <p class="p-text">Веб-сайт</p>
                     </li>
                     <li><img src="Picture/portfolio2.jpg" alt="Постер New Orleans vs Golden State" width="370" height="294">
-                    <h3>Постер New Orleans vs Golden State</h3>
-                    <p>Дизайн</p>
+                    <h3 class="h3-text">Постер New Orleans vs Golden State</h3>
+                    <p class="p-text">Дизайн</p>
                     </li>
                     <li><img src="Picture/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Додаток</p>
+                    <h3 class="h3-text">Ресторан Seafood</h3>
+                    <p class="p-text">Додаток</p>
                     </li>
                     <li><img src="Picture/portfolio4.jpg" alt="Проєкт Prime" width="370" height="294">
-                    <h3>Проєкт Prime</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="h3-text">Проєкт Prime</h3>
+                    <p class="p-text">Маркетинг</p>
                     </li>
                     <li><img src="Picture/portfolio5.jpg" alt="Проєкт Boxes" width="370" height="294">
-                    <h3>Проєкт Boxes</h3>
-                    <p>Додаток</p>
+                    <h3 class="h3-text">Проєкт Boxes</h3>
+                    <p class="p-text">Додаток</p>
                     </li>
                     <li><img src="Picture/portfolio6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p></li>
+                    <h3 class="h3-text">Inspiration has no Borders</h3>
+                    <p class="p-text">Веб-сайт</p></li>
                     <li><img src="Picture/portfolio7.jpg" alt="Видання Limited Edition" width="370" height="294">
-                    <h3>Видання Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <h3 class="h3-text">Видання Limited Edition</h3>
+                    <p class="p-text">Дизайн</p>
                     </li>
                     <li><img src="Picture/portfolio8.jpg" alt="Проєкт LAB" width="370" height="294">
-                    <h3>Проєкт LAB</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="h3-text">Проєкт LAB</h3>
+                    <p class="p-text">Маркетинг</p>
                     </li>
                     <li><img src="Picture/portfolio9.jpg" alt="Growing Business" width="370" height="294">
-                    <h3>Growing Business</h3>
-                    <p>Додаток</p>
+                    <h3 class="h3-text">Growing Business</h3>
+                    <p class="p-text">Додаток</p>
                     </li>
                 </ul>
             </div>
@@ -83,12 +84,12 @@
     <footer>
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="Picture/logo.png" alt="WebStudio логотип" width="100" height="30">
+                <img src="Picture/logo.png" alt="WebStudio логотип">
             </a>
             <address>
-                <p>м. Київ, пр. Лесі Українки, 26</p>
-            <a href="mailto:info@webstudio.com">info@webstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <p class="footer-city">м. Київ, пр. Лесі Українки, 26</p>
+            <a href="mailto:info@webstudio.com" class="footer-text-gray">info@webstudio.com</a>
+            <a href="tel:+380961111111" class="footer-text-gray">+38 096 111 11 11</a>
             </address>
         </div>
     </footer>
